Fixing button layout bug, adding to about page, adding contenteditable area to intro on homepage

--- a/_themes/mattsoria/sass/components/_buttons.scss
+++ b/_themes/mattsoria/sass/components/_buttons.scss
@@ -5,6 +5,7 @@
   border: none;
   color: $white;
   font-family: $sans;
+  white-space: nowrap;
   padding: 0.5rem 2rem;
   display: inline-block;
   background: $highlight;
